Fixed MAGE-4293: Grammar Issues reported by community

--- a/app/locale/es_ES/Mage_Wishlist.csv
+++ b/app/locale/es_ES/Mage_Wishlist.csv
@@ -1,4 +1,4 @@
-"%1$s has been added to your wishlist. Click <a href=""%2$s"">here</a> to continue shopping","Se ha añadido %1$s a su lista de la compra. Pulse <a href=""%2$s"">aquí</a> para continuar comprando"
+"%1$s has been added to your wishlist. Click <a href=""%2$s"">here</a> to continue shopping.","Se ha añadido %1$s a su lista de la compra. Pulse <a href=""%2$s"">aquí</a> para continuar comprando."
 "%1$s has been updated in your wishlist.","Se ha actualizado %1$s en su lista de la compra."
 "%d product(s) have been added to shopping cart: %s.","%d artículo(s) se ha(n) añadido a la cesta de la compra: %s."
 "%s for ""%s"".","%s por ""%s""."
