--- a/app/locale/fr_FR/Mage_Wishlist.csv
+++ b/app/locale/fr_FR/Mage_Wishlist.csv
@@ -1,4 +1,4 @@
-"%1$s has been added to your wishlist. Click <a href=""%2$s"">here</a> to continue shopping","%1$s a été ajouté à votre liste de souhaits. Cliquez <a href=""%2$s"">ici</a> pour continuer vos achats."
+"%1$s has been added to your wishlist. Click <a href=""%2$s"">here</a> to continue shopping.","%1$s a été ajouté à votre liste de souhaits. Cliquez <a href=""%2$s"">ici</a> pour continuer vos achats."
 "%1$s has been updated in your wishlist.","%1$s a été mis à jour dans votre liste de souhaits."
 "%d product(s) have been added to shopping cart: %s.","%d produit(s) a(ont) été ajouté(s) au caddy: %s."
 "%s for ""%s"".","%s pour ""%s""."
