--- a/app/locale/nl_NL/Mage_Wishlist.csv
+++ b/app/locale/nl_NL/Mage_Wishlist.csv
@@ -1,4 +1,4 @@
-"%1$s has been added to your wishlist. Click <a href=""%2$s"">here</a> to continue shopping","%1$s is toegevoegd aan uw wensenlijst. Klik <a href=""%2$s"">hier</a> om verder te gaan met winkelen."
+"%1$s has been added to your wishlist. Click <a href=""%2$s"">here</a> to continue shopping.","%1$s is toegevoegd aan uw wensenlijst. Klik <a href=""%2$s"">hier</a> om verder te gaan met winkelen."
 "%1$s has been updated in your wishlist.","%1$s is geüpdatet in uw wensenlijst."
 "%d product(s) have been added to shopping cart: %s.","%d product(en) zijn toegevoegd aan het winkelwagentje: %s."
 "%s for ""%s"".","%s voor ""%s""."
