--- a/app/locale/de_DE/Mage_Wishlist.csv
+++ b/app/locale/de_DE/Mage_Wishlist.csv
@@ -1,4 +1,4 @@
-"%1$s has been added to your wishlist. Click <a href=""%2$s"">here</a> to continue shopping","%1$s wurde zu Ihrer Wunschliste hinzugefügt. Klicken Sie <a href=""%2$s"">hier</a>, um Ihren Einkauf fortzusetzen"
+"%1$s has been added to your wishlist. Click <a href=""%2$s"">here</a> to continue shopping.","%1$s wurde zu Ihrer Wunschliste hinzugefügt. Klicken Sie <a href=""%2$s"">hier</a>, um Ihren Einkauf fortzusetzen."
 "%1$s has been updated in your wishlist.","%1$s wurde in Ihrer Wunschliste aktualisiert."
 "%d product(s) have been added to shopping cart: %s.","%d Produkt(e) wurden zum Warenkorb hinzugefügt: %s."
 "%s for ""%s"".","%s für ""%s""."
