--- a/app/locale/es_ES/Mage_Checkout.csv
+++ b/app/locale/es_ES/Mage_Checkout.csv
@@ -329,7 +329,7 @@
 "Your order # is: %s.","Su número de pedido es: %s."
 "Your order cannot be completed at this time as there is no payment methods available for it.","Su pedido no se ha podido completar porque no hay ningún método de pago disponible."
 "Your order cannot be completed at this time as there is no shipping methods available for it. Please make necessary changes in your shipping address.","Su pedido no puede completarse en este momento ya que no hay métodos de envío disponibles. Realice los cambios necesarios en su dirección de envío."
-"Your order has been received","Se recibió su pedido"
+"Your order has been received.","Se recibió su pedido."
 "Your order number is ","Su número de pedido es"
 "Your recurring payment profiles:","Su perfil de pago periódico:"
 "Zip/Postal Code","Código Postal"
