--- a/app/locale/nl_NL/Mage_Checkout.csv
+++ b/app/locale/nl_NL/Mage_Checkout.csv
@@ -329,7 +329,7 @@
 "Your order # is: %s.","Uw bestelling # is: %s."
 "Your order cannot be completed at this time as there is no payment methods available for it.","Uw bestelling kan nu niet worden afgerond omdat er geen betaalmethoden beschikbaar zijn."
 "Your order cannot be completed at this time as there is no shipping methods available for it. Please make necessary changes in your shipping address.","Uw bestelling kan nu niet worden afgerond omdat er geen verzendmethoden beschikbaar zijn. Maak de noodzakelijke veranderingen uw in afleveradres."
-"Your order has been received","Uw bestelling is ontvangen"
+"Your order has been received.","Uw bestelling is ontvangen."
 "Your order number is ","Uw bestelnummer is"
 "Your recurring payment profiles:","Uw herbruikbare betalingsprofielen:"
 "Zip/Postal Code","Postcode"
