--- a/app/locale/pt_BR/Mage_Checkout.csv
+++ b/app/locale/pt_BR/Mage_Checkout.csv
@@ -329,7 +329,7 @@
 "Your order # is: %s.","Seu pedido # está: %s."
 "Your order cannot be completed at this time as there is no payment methods available for it.","Seu pedido não pode ser concluído neste momento pois não há métodos de pagamento disponíveis para ele."
 "Your order cannot be completed at this time as there is no shipping methods available for it. Please make necessary changes in your shipping address.","Seu pedido não pode ser concluído neste momento pois não há métodos de envio disponíveis para ele. Por favor faça as mudanças necessárias no seu endereço de envio."
-"Your order has been received","Seu pedido foi recebido."
+"Your order has been received.","Seu pedido foi recebido."
 "Your order number is ","O número do seu pedido é"
 "Your recurring payment profiles:","Seus perfis de pagamentos recorrentes:"
 "Zip/Postal Code","Zip/Código Postal"
