--- a/app/locale/pt_BR/Mage_Wishlist.csv
+++ b/app/locale/pt_BR/Mage_Wishlist.csv
@@ -1,4 +1,4 @@
-"%1$s has been added to your wishlist. Click <a href=""%2$s"">here</a> to continue shopping","%1$s foi adicionado à sua lista de desejos. Clique <a href=""%2$s"">aqui</a> para continuar comprando"
+"%1$s has been added to your wishlist. Click <a href=""%2$s"">here</a> to continue shopping.","%1$s foi adicionado à sua lista de desejos. Clique <a href=""%2$s"">aqui</a> para continuar comprando."
 "%1$s has been updated in your wishlist.","%1$s foi atualizado em sua lista de desejos."
 "%d product(s) have been added to shopping cart: %s.","%d produto(s) foram adicionados ao carrinho de compras: %s."
 "%s for ""%s"".","%s para ""%s""."
