--- a/app/locale/zh_CN/Mage_Checkout.csv
+++ b/app/locale/zh_CN/Mage_Checkout.csv
@@ -329,7 +329,7 @@
 "Your order # is: %s.","您的订单编号为： %s"
 "Your order cannot be completed at this time as there is no payment methods available for it.","由于付款方法不可用，现在无法完成您的订单。"
 "Your order cannot be completed at this time as there is no shipping methods available for it. Please make necessary changes in your shipping address.","由于送货方法不可用，现在无法完成您的订单。请更改您的收货地址。"
-"Your order has been received","我们已经收到您的订单"
+"Your order has been received.","我们已经收到您的订单。"
 "Your order number is ","您的订单号是"
 "Your recurring payment profiles:","您的付款档案："
 "Zip/Postal Code","邮政编码"
