--- a/app/locale/zh_CN/Mage_Wishlist.csv
+++ b/app/locale/zh_CN/Mage_Wishlist.csv
@@ -1,4 +1,4 @@
-"%1$s has been added to your wishlist. Click <a href=""%2$s"">here</a> to continue shopping","%1$s 已添加到您的愿望清单。单击<a href=""%2$s"">这里</a>来继续购物"
+"%1$s has been added to your wishlist. Click <a href=""%2$s"">here</a> to continue shopping.","%1$s 已添加到您的愿望清单。单击<a href=""%2$s"">这里</a>来继续购物。"
 "%1$s has been updated in your wishlist.","%1$s 已在您的愿望清单中更新。"
 "%d product(s) have been added to shopping cart: %s.","%d 个产品已添加到购物车：%s。"
 "%s for ""%s"".","%s 对 “%s”。"
