Fixed MAGE-6639: Order by SKU tab isn't translated for all existing locales

--- a/app/locale/es_ES/Enterprise_Checkout.csv
+++ b/app/locale/es_ES/Enterprise_Checkout.csv
@@ -32,7 +32,7 @@
 "Customer Groups","Grupos de cliente"
 "Customer not found","Cliente no encontrado"
 "Customers","Clientes"
-"Defines whether a link to My Account > Order by SKU page will be displayed on the widget","Indica si se mostrará en el widget un enlace a la página Mi cuenta > Pedido por SKU"
+"Defines whether a link to My Account > Order by SKU page will be displayed on the widget","Define si un enlace a Mi Cuenta > Pedido por SKU se mostrará en el widget"
 "Disabled products cannot be added.","Los productos no válidos no se pueden añadir."
 "Discount","Descuento"
 "Display a Link to Loading a Spreadsheet","Mostrar un enlace a Cargando una hoja de cálculo"
@@ -61,10 +61,10 @@
 "Only %s%g%s left in stock","Solo hay %s%g%s disponibles"
 "Only .csv file format is supported.","Solo está soportado el formato .csv  de archivo."
 "Only <span id=""","Solo <span id="""
-"Order by SKU","Ordenar por SKU"
-"Order by SKU Description","Ordenar por descripción de SKU"
-"Order by SKU Settings","Ordenar por ajustes de SKU"
-"Order by SKU Template","Ordenar por plantillas de SKU"
+"Order by SKU","Pedido por SKU"
+"Order by SKU Description","Descripción del Pedido por SKU"
+"Order by SKU Settings","Ajustes del Pedido por SKU"
+"Order by SKU Template","Plantilla del Pedido por SKU"
 "Ordered item id is not received.","El id del artículo pedido no se ha recibido."
 "Ordered item is not loaded.","El artículo pedido no está cargado."
 "Please enter a valid number in the ""Qty"" field.","Por favor, introduzca un número válido en el campo ""Cant.""."
@@ -102,7 +102,7 @@
 "The product cannot be added to cart in requested quantity.","El producto no se puede añadir al carro en la cantidad solicitada."
 "The product cannot be added to cart.","El producto no se puede añadir al carro."
 "The products is assigned to another website.","Los productos están asignados a otra página web."
-"The text of the link to the My Account > Order by SKU page","El texto del enlace a la página de Mi cuenta > Ordenar por SKU"
+"The text of the link to the My Account > Order by SKU page","El texto del enlace a la página Mi cuenta > Pedido por SKU"
 "Total","Total"
 "Total %d product(s)","%d producto(s) en total"
 "Total incl. tax","Total con impuestos incluidos"
