--- a/app/locale/nl_NL/Enterprise_Checkout.csv
+++ b/app/locale/nl_NL/Enterprise_Checkout.csv
@@ -32,11 +32,11 @@
 "Customer Groups","Klantgroepen"
 "Customer not found","klant niet gevonden"
 "Customers","klanten"
-"Defines whether a link to My Account > Order by SKU page will be displayed on the widget","Geef aan of er een link naar Mijn Account > Bestel door SKU moet worden weergegeven op de widget"
+"Defines whether a link to My Account > Order by SKU page will be displayed on the widget","Bepaalt of een link naar Mijn Account > Bestelling via SKU pagina getoond wordt op de widget"
 "Disabled products cannot be added.","Niet actieve producten kunnen niet worden toegevoegd."
 "Discount","korting"
 "Display a Link to Loading a Spreadsheet","Geef een link weer om een Spreadsheet te laden"
-"Enable Order by SKU on My Account in Frontend","Activeer Sorteer op SKU in Mijn Account op de Front-end"
+"Enable Order by SKU on My Account in Frontend","Sta Bestelling toe via SKU op Mijn Account in Frontend"
 "Excl. Tax","exclusief btw"
 "Failed to add a product of order item","Niet gelukt om een product toe te voegen van het bestelde item"
 "Failed to reorder item","niet gelukt om item opnieuw te bestellen"
@@ -61,10 +61,10 @@
 "Only %s%g%s left in stock","Slechts %s%g%s nog op voorraad"
 "Only .csv file format is supported.","Alleen .csv bestanden worden ondersteund."
 "Only <span id=""","Alleen <span id="""
-"Order by SKU","Sorteer op SKU"
-"Order by SKU Description","Sorteer op SKU omschrijving"
-"Order by SKU Settings","Sorteer op SKU Instellingen"
-"Order by SKU Template","Sorteer op SKU sjabloon"
+"Order by SKU","Bestelling via SKU"
+"Order by SKU Description","Bestelling via SKU Omschrijving"
+"Order by SKU Settings","Bestelling via SKU Instellingen"
+"Order by SKU Template","Bestelling via SKU Template"
 "Ordered item id is not received.","I.D. van het bestelde product is niet ontvangen."
 "Ordered item is not loaded.","Bestelde product is niet geladen."
 "Please enter a valid number in the ""Qty"" field.","Gelieve een geldig nummer in te voeren in het ""Qty"" veld."
@@ -102,7 +102,7 @@
 "The product cannot be added to cart in requested quantity.","Het product kan niet worden toegevoegd aan het winkelwagentje in de gevraagde hoeveelheid."
 "The product cannot be added to cart.","Het product kan niet worden toegevoegd aan het winkelwagentje."
 "The products is assigned to another website.","De producten zijn toegewezen aan een andere website."
-"The text of the link to the My Account > Order by SKU page","De tekst van de link naar de Mijn Account > Sorteer op SKU pagina"
+"The text of the link to the My Account > Order by SKU page","De tekst van de link naar Mijn Account > Bestelling via SKU pagina"
 "Total","totaal"
 "Total %d product(s)","totaal ... producten"
 "Total incl. tax","totaal inclusief btw"
