Revert "Implemented MAGETWO-1121: Product View Simplified Layout"
This reverts commit cda62569f882aaf5674b6a0e815a6c7d68751219.

Conflicts:

	app/code/core/Mage/Catalog/view/frontend/layout.xml
	app/design/frontend/default/iphone/Mage_Catalog/layout.xml
	app/design/frontend/default/iphone/Mage_Catalog/product/view.phtml
	app/design/frontend/default/modern/Mage_Catalog/layout.xml
	app/design/frontend/enterprise/default/Mage_Catalog/layout.xml
	app/design/frontend/enterprise/default/Mage_Catalog/product/view.phtml
	app/design/frontend/enterprise/iphone/Mage_Catalog/layout.xml
	app/design/frontend/enterprise/iphone/Mage_Catalog/product/view.phtml
	app/design/frontend/pro/default/Mage_Catalog/layout.xml

--- a/app/locale/de_DE/Mage_Catalog.csv
+++ b/app/locale/de_DE/Mage_Catalog.csv
@@ -114,6 +114,7 @@
 "Based On","Basierend auf"
 "Before Order Confirmation","Vor der Bestellungsbestätigung"
 "Best Value","Bester Wert"
+"Block after Info Column","Nach Infospalte sperren"
 "Bottom Block Options Wrapper","Unterseite Sperroptionendeckblatt"
 "Bottom/Left","Unten/Links"
 "Bottom/Right","Unten/Rechts"
