--- a/app/locale/en_US/Mage_Catalog.csv
+++ b/app/locale/en_US/Mage_Catalog.csv
@@ -114,6 +114,7 @@
 "Based On","Based On"
 "Before Order Confirmation","Before Order Confirmation"
 "Best Value","Best Value"
+"Block after Info Column","Block after Info Column"
 "Bottom Block Options Wrapper","Bottom Block Options Wrapper"
 "Bottom/Left","Bottom/Left"
 "Bottom/Right","Bottom/Right"
