--- a/app/locale/zh_CN/Mage_Catalog.csv
+++ b/app/locale/zh_CN/Mage_Catalog.csv
@@ -114,6 +114,7 @@
 "Based On","基于"
 "Before Order Confirmation","在订单确认之前"
 "Best Value","最佳值"
+"Block after Info Column","信息栏之后阻止"
 "Bottom Block Options Wrapper","底部阻止选项包装"
 "Bottom/Left","底部/左侧"
 "Bottom/Right","底部/右侧"
