--- a/app/locale/fr_FR/Mage_Catalog.csv
+++ b/app/locale/fr_FR/Mage_Catalog.csv
@@ -114,6 +114,7 @@
 "Based On","Basé sur"
 "Before Order Confirmation","Avant la confirmation de commande"
 "Best Value","Meilleure valeur"
+"Block after Info Column","Bloc après Colonne Info"
 "Bottom Block Options Wrapper","Bloc Inférieur Options d'Emballage"
 "Bottom/Left","Inférieur/Gauche"
 "Bottom/Right","Inférieur/ Droite"
