Implemented MAGETWO-2254: Extract tags functionality from Mage_Rss and Mage_CatalogSearch modules - extracted necessary files - added unit tests for new classes

--- a/app/code/core/Mage/Tag/locale/de_DE/Mage_Tag.csv
+++ b/app/code/core/Mage/Tag/locale/de_DE/Mage_Tag.csv
@@ -82,6 +82,7 @@
 "Tags","Tags"
 "Tags List (All Available)","Tagliste (Alle verfügbar)"
 "Tags List Before","Etikettenliste zuerst"
+"Tags Products","Gekennzeichnete Produkte"
 "Tags:","Tags:"
 "Telephone","Telefon"
 "The tag has been deleted.","Das Tag wurde gelöscht."
