--- a/app/code/core/Mage/Tag/locale/fr_FR/Mage_Tag.csv
+++ b/app/code/core/Mage/Tag/locale/fr_FR/Mage_Tag.csv
@@ -82,6 +82,7 @@
 "Tags","Étiquettes"
 "Tags List (All Available)","Liste d'étiquettes (toutes disponibles)"
 "Tags List Before","Tag liste avant"
+"Tags Products","Tags des produits"
 "Tags:","Étiquettes:"
 "Telephone","Téléphone"
 "The tag has been deleted.","L'étiquette a été supprimée"
