--- a/app/code/core/Mage/Tag/locale/zh_CN/Mage_Tag.csv
+++ b/app/code/core/Mage/Tag/locale/zh_CN/Mage_Tag.csv
@@ -82,6 +82,7 @@
 "Tags","标签"
 "Tags List (All Available)","标签列表（所有可用内容）"
 "Tags List Before","标签列表之前"
+"Tags Products","标记产品"
 "Tags:","标签："
 "Telephone","电话"
 "The tag has been deleted.","标签已被删除。"
