--- a/app/code/core/Mage/Tag/locale/en_US/Mage_Tag.csv
+++ b/app/code/core/Mage/Tag/locale/en_US/Mage_Tag.csv
@@ -82,6 +82,7 @@
 "Tags","Tags"
 "Tags List (All Available)","Tags List (All Available)"
 "Tags List Before","Tags List Before"
+"Tags Products","Tags Products"
 "Tags:","Tags:"
 "Telephone","Telephone"
 "The tag has been deleted.","The tag has been deleted."
