--- a/app/code/core/Mage/Tag/locale/pt_BR/Mage_Tag.csv
+++ b/app/code/core/Mage/Tag/locale/pt_BR/Mage_Tag.csv
@@ -82,6 +82,7 @@
 "Tags","Marcas"
 "Tags List (All Available)","Lista de Tags (Todas Disponíveis)"
 "Tags List Before","Lista de Tags Anteriores"
+"Tags Products","Produtos com marcas"
 "Tags:","Tags:"
 "Telephone","Telefone"
 "The tag has been deleted.","A marca foi eliminada."
