CR changes MAGETWO-2254: Extract tags functionality from Mage_Rss and Mage_CatalogSearch modules - reverted changes of translations - fixed helper instantiation

--- a/app/code/core/Mage/Rss/locale/en_US/Mage_Rss.csv
+++ b/app/code/core/Mage/Rss/locale/en_US/Mage_Rss.csv
@@ -46,6 +46,7 @@
 "Store: %s <br/>","Store: %s <br/>"
 "Subtotal","Subtotal"
 "Summary of review: %s <br/>","Summary of review: %s <br/>"
+"Tags Products","Tags Products"
 "Tax","Tax"
 "There are no Rss Feeds","There are no Rss Feeds"
 "To:","To:"
