--- a/app/code/core/Mage/Rss/locale/zh_CN/Mage_Rss.csv
+++ b/app/code/core/Mage/Rss/locale/zh_CN/Mage_Rss.csv
@@ -46,6 +46,7 @@
 "Store: %s <br/>","商店：%s <br/>"
 "Subtotal","小计"
 "Summary of review: %s <br/>","评论摘要：%s <br/>"
+"Tags Products","标记产品"
 "Tax","传真"
 "There are no Rss Feeds","没有RSS源"
 "To:","至："
