--- a/app/code/core/Mage/Rss/locale/de_DE/Mage_Rss.csv
+++ b/app/code/core/Mage/Rss/locale/de_DE/Mage_Rss.csv
@@ -46,6 +46,7 @@
 "Store: %s <br/>","Geschäft: %s <br/>"
 "Subtotal","Zwischensumme"
 "Summary of review: %s <br/>","Zusammenfassung des Berichtes: %s <br/>"
+"Tags Products","Gekennzeichnete Produkte"
 "Tax","Steuer"
 "There are no Rss Feeds","Es gibt keine RSS-Feeds."
 "To:","An:"
