--- a/app/code/core/Mage/Rss/locale/es_ES/Mage_Rss.csv
+++ b/app/code/core/Mage/Rss/locale/es_ES/Mage_Rss.csv
@@ -46,6 +46,7 @@
 "Store: %s <br/>","Tienda: %s <br/>"
 "Subtotal","Subtotal"
 "Summary of review: %s <br/>","Resumen de reseña: %s <br/>"
+"Tags Products","Etiquetas de productos"
 "Tax","Impuestos"
 "There are no Rss Feeds","No hay fuentes RSS"
 "To:","A:"
