--- a/app/code/core/Mage/Rss/locale/fr_FR/Mage_Rss.csv
+++ b/app/code/core/Mage/Rss/locale/fr_FR/Mage_Rss.csv
@@ -46,6 +46,7 @@
 "Store: %s <br/>","Boutique : %s <br/>"
 "Subtotal","Sous-total"
 "Summary of review: %s <br/>","Résumé des critiques : %s <br/>"
+"Tags Products","Tags des produits"
 "Tax","Taxe"
 "There are no Rss Feeds","Il n'y a pas de flux RSS"
 "To:","A :"
