--- a/app/code/core/Mage/Rss/locale/nl_NL/Mage_Rss.csv
+++ b/app/code/core/Mage/Rss/locale/nl_NL/Mage_Rss.csv
@@ -46,6 +46,7 @@
 "Store: %s <br/>","Winkel: %s <br/>"
 "Subtotal","Subtotaal"
 "Summary of review: %s <br/>","Samenvatting van beoordeling: %s <br/>"
+"Tags Products","Tags Producten"
 "Tax","Belasting"
 "There are no Rss Feeds","Er zijn geen RSS feeds"
 "To:","Aan:"
