--- a/app/code/core/Mage/Rss/locale/pt_BR/Mage_Rss.csv
+++ b/app/code/core/Mage/Rss/locale/pt_BR/Mage_Rss.csv
@@ -46,6 +46,7 @@
 "Store: %s <br/>","Loja: %s <br/>"
 "Subtotal","Subtotal"
 "Summary of review: %s <br/>","Resumo de avaliação: %s <br/>"
+"Tags Products","Produtos com marcas"
 "Tax","Taxas"
 "There are no Rss Feeds","Não há Rss Feeds"
 "To:","Para:"
